fix icon alignment in RTL provider views

--- a/packages/@uppy/provider-views/src/style/uppy-ProviderBrowser-viewType--list.scss
+++ b/packages/@uppy/provider-views/src/style/uppy-ProviderBrowser-viewType--list.scss
@@ -26,7 +26,7 @@
 
   // Checkbox
   .uppy-ProviderBrowserItem-fakeCheckbox {
-    margin-right: 15px;
+    margin-inline-end: 15px;
     height: 17px; width: 17px;
     border-radius: 3px;
     background-color: $white;
